# lumai-1750269809090-wtu621

./: Anchor.toml  README.md
app/: package.json
app/src/app/: layout.tsx  page.tsx
app/src/app/create/: page.tsx
app/src/app/market/[id]/: page.tsx
app/src/app/portfolio/: page.tsx
app/src/components/: BettingInterface.tsx  CreateMarket.tsx  LiquidityPool.tsx  MarketAnalytics.tsx  MarketCard.tsx  MarketList.tsx  Portfolio.tsx  WalletConnect.tsx
app/src/hooks/: useMarkets.ts  useWallet.ts
app/src/lib/: market.ts  oracle.ts  program.ts  wallet.ts
app/src/lib/anchor/: prediction-market.ts
app/src/types/: market.ts
programs/prediction-market/: Cargo.toml
programs/prediction-market/src/: error.rs  lib.rs  state.rs  utils.rs
programs/prediction-market/src/instructions/: add_liquidity.rs  claim_winnings.rs  create_market.rs  mod.rs  place_bet.rs  remove_liquidity.rs  resolve_market.rs
