[package]
name = "prediction-market"
version = "0.1.0"
description = "Solana-based prediction market program for betting on real-world events"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] }
pyth-solana-receiver-sdk = "0.2.0"
switchboard-v2 = "0.4.0"
borsh = "0.10.3"
arrayref = "0.3.7"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
tokio = { version = "1.0", features = ["macros"] }